Android: fix issue where logo overlaps on forms

--- a/src/pages/LRLogo.scss
+++ b/src/pages/LRLogo.scss
@@ -2,7 +2,6 @@
 	position: absolute;
 	top: 20px;
 	left: 35px;
-	z-index: 10;
 
 	.logo {
 		width: 60px;
